# opcuadomain

./: .gitignore  README.md  pyproject.toml
doc/: OPC 20020(11020) - UA Companion Specification Template v1.01.17.docx
opcuadomain/: __init__.py  defaults.py  layout.py  logging.py  opcua.py  uanode.py  utils.py
opcuadomain/directives/: uaimport.py  uanode.py  uaobject.py  uavariable.py
opcuadomain/functions/: __init__.py  common.py  functions.py
opcuadomain/indices/: uareferencesindex.py  uavariablesindex.py
opcuadomain/nodes/: __init__.py
tests/doc_tests/doc_basic/: conf.py  index.rst  vars.rst
tests/nodesets/: WDS_Nodeset.xml  uaNodesGIM.xml
